--- a/MainLib/View/PersonInsuranceDocumentsView.xaml
+++ b/MainLib/View/PersonInsuranceDocumentsView.xaml
@@ -1,93 +1,91 @@
-﻿<Window x:Class="MainLib.PersonInsuranceDocumentsView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:mainLib="clr-namespace:MainLib"
-        xmlns:wpf="http://wpfcontrols.com/"
-        xmlns:core="clr-namespace:Core;assembly=StuffLib"
-        mc:Ignorable="d"
-        Title="Страховые документы" SizeToContent="WidthAndHeight" WindowStartupLocation="Manual" d:DataContext="{d:DesignData mainLib:PersonInsuranceDocumentsViewModel}"
-        Loaded="Window_Loaded" MinWidth="300" MinHeight="150">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
+                    xmlns:mainLib="clr-namespace:MainLib"
+                    xmlns:wpf="http://wpfcontrols.com/">
 
-    <Window.Resources>
-        <core:UniversalConverter x:Key="InsuranceDocementStateToBackgroundBrushConverter">
-            <core:ConverterItem From="{x:Static mainLib:ItemState.Active}">
-                <core:ConverterItem.To>
-                    <SolidColorBrush Color="LightGreen" />
-                </core:ConverterItem.To>
-            </core:ConverterItem>
-            <core:ConverterItem From="{x:Static mainLib:ItemState.Inactive}">
-                <core:ConverterItem.To>
-                    <SolidColorBrush Color="LightPink" />
-                </core:ConverterItem.To>
-            </core:ConverterItem>
-        </core:UniversalConverter>
+    <core:UniversalConverter x:Key="PersonInsuranceDocumentStateToBackgroundBrushConverter">
+        <core:ConverterItem From="{x:Static mainLib:ItemState.Active}">
+            <core:ConverterItem.To>
+                <SolidColorBrush Color="Green" />
+            </core:ConverterItem.To>
+        </core:ConverterItem>
+        <core:ConverterItem From="{x:Static mainLib:ItemState.Inactive}">
+            <core:ConverterItem.To>
+                <SolidColorBrush Color="Red" />
+            </core:ConverterItem.To>
+        </core:ConverterItem>
+    </core:UniversalConverter>
 
-        <DataTemplate x:Key="AutoCompleteTemplate">
-            <Border Padding="5">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Text="{Binding Path=NameSMOK}"
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+
+    <DataTemplate x:Key="AutoCompleteTemplate">
+        <Border Padding="5">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="{Binding Path=NameSMOK}"
                                FontWeight="Bold" 
                                Grid.Column="0" 
                                Grid.Row="0"
                                VerticalAlignment="Bottom"/>
-                    <TextBlock Text="{Binding Path=AddressF}"
+                <TextBlock Text="{Binding Path=AddressF}"
                                Foreground="Gray"
                                Grid.Column="0" 
                                Grid.Row="2"
                                FontFamily="Segoe UI"
                                VerticalAlignment="Bottom"/>
-                </Grid>
-            </Border>
-        </DataTemplate>
-    </Window.Resources>
+            </Grid>
+        </Border>
+    </DataTemplate>
 
-    <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
-        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Выбрать" Margin="3" Padding="2" Background="#FFADEE9A"  Command="{Binding AcceptCommand}" Click="button_Click"/>
-            <Button Content="Отмена" Margin="3" Padding="2" Background="#FFFFBEBE" Command="{Binding CancelCommand}" Click="button_Click"/>
-        </StackPanel>
-        <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddInsuranceDocumentCommand}" Content="Добавить" Margin="5" Background="White"/>
-        <ItemsControl BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding InsuranceDocuments}" Margin="5">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Border BorderBrush="Black" BorderThickness="1" Background="{Binding InsuranceDocumentState, Converter={StaticResource InsuranceDocementStateToBackgroundBrushConverter}}">
-                        <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch" >
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
+    <DataTemplate DataType="{x:Type  mainLib:PersonInsuranceDocumentsViewModel}">
+        <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
+            <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24" Command="{Binding AddInsuranceDocumentCommand}" Content="Добавить" Margin="5" Background="White"/>
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Height="46" Text="Нет ни одного стахового документа. Чтобы создать, нажмите кнопку 'Добавить'" Foreground="Gray"
+                                           Visibility="{Binding PersonInsuranceDocumentsHasNoItems, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <ScrollViewer MinHeight="100" MaxHeight="750" VerticalScrollBarVisibility="Auto">
+                <ItemsControl BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding InsuranceDocuments}" Margin="5">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid HorizontalAlignment="Stretch" MinWidth="320" MaxWidth="320" MinHeight="54" VerticalAlignment="Stretch" >
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
 
-                            <Button  Grid.Row="0" Grid.Column="3" Margin="2" Content="x" Background="White" Width="auto" Height="auto" Padding="2" HorizontalAlignment="Right" 
-                                 Command="{Binding DataContext.DeleteInsuranceDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}"/>
+                                <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" FontSize="14" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding PersonInsuranceDocumentStateString, Mode=OneWay}" 
+                                       Foreground="{Binding PersonInsuranceDocumentState, Converter={StaticResource PersonInsuranceDocumentStateToBackgroundBrushConverter}}"/>
 
-                            <TextBlock Grid.Row="1" Grid.Column="0" Margin="2" Text="Вид полиса" />
-                            <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="2" ItemsSource="{Binding DataContext.ListInsuranceDocumentTypes, Mode=OneTime, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
+                                <Button  Grid.Row="0" Grid.Column="3" Margin="2" Background="White" Width="auto" Height="auto" Padding="2" HorizontalAlignment="Right"  BorderThickness="0" ToolTip="Удалить стаховой документ"
+                                 Command="{Binding DataContext.DeleteInsuranceDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}">
+                                    <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png"  Width="16" Height="16"/>
+                                </Button>
+
+                                <TextBlock Grid.Row="1" Grid.Column="0" Margin="2" Text="Вид полиса" />
+                                <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="2" ItemsSource="{Binding DataContext.ListInsuranceDocumentTypes, Mode=OneTime, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
                                   DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding InsuranceDocumentTypeId}" />
 
-                            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="2" Text="Страховая компания" />
+                                <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Margin="2" Text="Страховая компания" />
 
-                            <wpf:AutoCompleteTextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2" Background="White"
+                                <wpf:AutoCompleteTextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="2" Background="White"
                                  Watermark="введите слова из названия и регион для поиска"
                                  DisplayMember="NameSMOK"
                                  ItemTemplate="{StaticResource AutoCompleteTemplate}"
@@ -96,26 +94,27 @@
                                  IconVisibility="Visible"
                                  Provider="{Binding DataContext.InsuranceCompanySuggestionProvider, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
                                  x:Name="Actb" TabIndex="1">
-                                <wpf:AutoCompleteTextBox.LoadingContent>
-                                    <TextBlock Text="Загрузка данных..." Margin="5" FontSize="14" />
-                                </wpf:AutoCompleteTextBox.LoadingContent>
-                            </wpf:AutoCompleteTextBox>
+                                    <wpf:AutoCompleteTextBox.LoadingContent>
+                                        <TextBlock Text="Загрузка данных..." Margin="5" FontSize="14" />
+                                    </wpf:AutoCompleteTextBox.LoadingContent>
+                                </wpf:AutoCompleteTextBox>
 
-                            <TextBlock Grid.Row="4" Grid.Column="0" Margin="2" Text="Серия" />
-                            <TextBox Grid.Row="4" Grid.Column="1" Margin="2" Text="{Binding Series}" />
-                            <TextBlock Grid.Row="4" Grid.Column="2" Margin="2" Text="Номер"/>
-                            <TextBox Grid.Row="4" Grid.Column="3" Margin="2" Text="{Binding Number}"/>
+                                <TextBlock Grid.Row="4" Grid.Column="0" Margin="2" Text="Серия" />
+                                <TextBox Grid.Row="4" Grid.Column="1" Margin="2" Text="{Binding Series}" />
+                                <TextBlock Grid.Row="4" Grid.Column="2" Margin="2" Text="Номер"/>
+                                <TextBox Grid.Row="4" Grid.Column="3" Margin="2" Text="{Binding Number}"/>
 
-                            <TextBlock Grid.Row="5" Grid.Column="0" Margin="2"  Text="С "/>
-                            <DatePicker Grid.Row="5" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch" SelectedDate="{Binding BeginDate}" BorderThickness="1"/>
-                            <TextBlock Grid.Row="5" Grid.Column="2" Margin="2" Text="по" />
-                            <DatePicker Grid.Row="5" Grid.Column="3" Margin="2" HorizontalAlignment="Stretch"  SelectedDate="{Binding EndDate}" BorderThickness="1" IsEnabled="{Binding WithEndDate}"/>
+                                <TextBlock Grid.Row="5" Grid.Column="0" Margin="2"  Text="С "/>
+                                <DatePicker Grid.Row="5" Grid.Column="1" Margin="2" HorizontalAlignment="Stretch" SelectedDate="{Binding BeginDate}" BorderThickness="1"/>
+                                <TextBlock Grid.Row="5" Grid.Column="2" Margin="2" Text="по" />
+                                <DatePicker Grid.Row="5" Grid.Column="3" Margin="2" HorizontalAlignment="Stretch"  SelectedDate="{Binding EndDate}" BorderThickness="1" IsEnabled="{Binding WithEndDate}"/>
 
-                            <CheckBox Grid.Row="6" Grid.Column="3" Margin="2" HorizontalAlignment="Stretch" Content="Бессрочно" BorderThickness="1" IsChecked="{Binding WithoutEndDate}"/>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </DockPanel>
-</Window>
+                                <CheckBox Grid.Row="6" Grid.Column="3" Margin="2" HorizontalAlignment="Stretch" Content="Бессрочно" BorderThickness="1" IsChecked="{Binding WithoutEndDate}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+        </DockPanel>
+    </DataTemplate>
+</ResourceDictionary>
