--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -16,6 +16,8 @@
                 <ResourceDictionary Source="View/OccupiedTimeSlotView.xaml" />
                 <ResourceDictionary Source="View/ScheduleAssignmentUpdateView.xaml" />
                 <ResourceDictionary Source="View/ScheduleEditorView.xaml" />
+                <ResourceDictionary Source="View/ScheduleEditorRoomView.xaml" />
+                <ResourceDictionary Source="View/ScheduleEditorRoomDayView.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ControlTemplate x:Key="ValidationTemplate">
                 <Grid>
