#6 More changes for schedule editor
Fixed bug with negative height in schedule

--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -18,6 +18,7 @@
                 <ResourceDictionary Source="View/ScheduleEditorView.xaml" />
                 <ResourceDictionary Source="View/ScheduleEditorRoomView.xaml" />
                 <ResourceDictionary Source="View/ScheduleEditorRoomDayView.xaml" />
+                <ResourceDictionary Source="View/ScheduleEditorRecordTypeView.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ControlTemplate x:Key="ValidationTemplate">
                 <Grid>
