--- a/Registry/View/ScheduleEditorRoomDayView.xaml
+++ b/Registry/View/ScheduleEditorRoomDayView.xaml
@@ -2,13 +2,24 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry">
     <DataTemplate DataType="{x:Type registry:ScheduleEditorRoomDayViewModel}">
-        <Grid>
+        <Grid x:Name="grid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition MinHeight="75" SharedSizeGroup="{Binding DayOfWeek, StringFormat='Day{0}'}" />
             </Grid.RowDefinitions>
-            <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="1" BorderBrush="Gray">
-
+            <Border  BorderThickness="1" BorderBrush="Gray" x:Name="border">
+                <StackPanel Orientation="Vertical">
+                    <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding RecordTypes}">
+                    </ItemsControl>
+                    <Button x:Name="button" Visibility="Hidden" Background="White" Margin="3" HorizontalAlignment="Stretch" Content="Добавить услугу" Command="{Binding AddRecordTypeCommand, Mode=OneTime}" />
+                </StackPanel>
             </Border>
         </Grid>
+        <DataTemplate.Triggers>
+            <Trigger SourceName="grid" Property="IsMouseOver" Value="True">
+                <Setter TargetName="border" Property="BorderBrush" Value="Black" />
+                <Setter TargetName="border" Property="Background" Value="LightBlue" />
+                <Setter TargetName="button" Property="Visibility" Value="Visible" />
+            </Trigger>
+        </DataTemplate.Triggers>
     </DataTemplate>
 </ResourceDictionary>
