--- a/Registry/View/ScheduleEditorView.xaml
+++ b/Registry/View/ScheduleEditorView.xaml
@@ -1,82 +1,85 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
-                    xmlns:core="clr-namespace:Core;assembly=StuffLib">
+                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
+                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
     <DataTemplate DataType="{x:Type registry:ScheduleEditorViewModel}">
-        <DockPanel LastChildFill="True">
-            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-                <TextBlock Text="Выберите дату" Margin="5" VerticalAlignment="Center" />
-                <DatePicker Margin="5" VerticalAlignment="Center" SelectedDateFormat="Long" SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged}" Width="130" />
-            </StackPanel>
-            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.IsSharedSizeScope="True">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <!--Room headers-->
-                <ScrollViewer Grid.Row="0" Grid.Column="1" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Disabled" core:ScrollSynchronizer.HorizontalScrollGroup="ScheduleEditorHorizontalScroll">
-                    <StackPanel Orientation="Horizontal">
+        <xctk:BusyIndicator IsBusy="{Binding IsBusy}" BusyContent="{Binding BusyStatus}" MaxHeight="700" MaxWidth="900">
+            <DockPanel LastChildFill="True">
+                <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+                    <TextBlock Text="Выберите дату" Margin="5" VerticalAlignment="Center" />
+                    <DatePicker Margin="5" VerticalAlignment="Center" SelectedDateFormat="Long" SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged}" Width="130" />
+                </StackPanel>
+                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.IsSharedSizeScope="True">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <!--Room headers-->
+                    <ScrollViewer Grid.Row="0" Grid.Column="1" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Disabled" core:ScrollSynchronizer.HorizontalScrollGroup="ScheduleEditorHorizontalScroll">
+                        <StackPanel Orientation="Horizontal">
+                            <ItemsControl ItemsSource="{Binding Rooms, Mode=OneTime}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type registry:ScheduleEditorRoomViewModel}">
+                                        <Border Background="LightSkyBlue" BorderBrush="Black" BorderThickness="0.5" HorizontalAlignment="Stretch" Width="200" >
+                                            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                                <TextBlock HorizontalAlignment="Center" Margin="3" Text="{Binding Number, StringFormat='#{0}', Mode=OneTime}" />
+                                                <TextBlock HorizontalAlignment="Center" Margin="3" Text="{Binding Name, Mode=OneTime}" />
+                                            </StackPanel>
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            <ScrollBar Visibility="Hidden" Orientation="Vertical" />
+                        </StackPanel>
+                    </ScrollViewer>
+                    <!--Day list-->
+                    <ScrollViewer Grid.Row="1" Grid.Column="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" core:ScrollSynchronizer.VerticalScrollGroup="ScheduleEditorHorizontalScroll">
+                        <StackPanel Orientation="Vertical">
+                            <ItemsControl Width="150" ItemsSource="{Binding WeekDays}" HorizontalContentAlignment="Stretch">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type registry:DayOfWeekViewModel}">
+                                        <Grid HorizontalAlignment="Stretch">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition SharedSizeGroup="{Binding DayOfWeek, StringFormat='Day{0}', Mode=OneTime}" />
+                                            </Grid.RowDefinitions>
+                                            <Border BorderThickness="1" BorderBrush="Gray">
+                                                <TextBlock TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0 5 5 0">
+                                               <Run Text="{Binding Date, StringFormat=ddd, Mode=OneTime}" FontWeight="SemiBold" FontSize="18" />
+                                               <LineBreak />
+                                               <Run Text="{Binding Date, StringFormat=dd.MM.yyyy, Mode=OneTime}" FontSize="12" />
+                                                </TextBlock>
+                                            </Border>
+
+                                        </Grid>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                            <ScrollBar Visibility="Hidden" Orientation="Horizontal" HorizontalAlignment="Stretch" />
+                        </StackPanel>
+                    </ScrollViewer>
+                    <!--Record types-->
+                    <ScrollViewer Grid.Row="1" Grid.Column="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" core:ScrollSynchronizer.VerticalScrollGroup="ScheduleEditorHorizontalScroll"
+                              core:ScrollSynchronizer.HorizontalScrollGroup="ScheduleEditorHorizontalScroll">
                         <ItemsControl ItemsSource="{Binding Rooms, Mode=OneTime}">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel Orientation="Horizontal" />
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate DataType="{x:Type registry:ScheduleEditorRoomViewModel}">
-                                    <Border Background="LightSkyBlue" BorderBrush="Black" BorderThickness="0.5" HorizontalAlignment="Stretch" Width="200" >
-                                        <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                            <TextBlock HorizontalAlignment="Center" Margin="3" Text="{Binding Number, StringFormat='#{0}', Mode=OneTime}" />
-                                            <TextBlock HorizontalAlignment="Center" Margin="3" Text="{Binding Name, Mode=OneTime}" />
-                                        </StackPanel>
-                                    </Border>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
                         </ItemsControl>
-                        <ScrollBar Visibility="Hidden" Orientation="Vertical" />
-                    </StackPanel>
-                </ScrollViewer>
-                <!--Day list-->
-                <ScrollViewer Grid.Row="1" Grid.Column="0" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Hidden" core:ScrollSynchronizer.VerticalScrollGroup="ScheduleEditorHorizontalScroll">
-                    <StackPanel Orientation="Vertical">
-                        <ItemsControl Width="150" ItemsSource="{Binding WeekDays}" HorizontalContentAlignment="Stretch">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate DataType="{x:Type registry:DayOfWeekViewModel}">
-                                    <Grid HorizontalAlignment="Stretch">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition SharedSizeGroup="{Binding DayOfWeek, StringFormat='Day{0}', Mode=OneTime}" />
-                                        </Grid.RowDefinitions>
-                                        <Border BorderThickness="1" BorderBrush="Gray">
-                                            <TextBlock TextAlignment="Right" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0 5 5 0">
-                                               <Run Text="{Binding Date, StringFormat=ddd, Mode=OneTime}" FontWeight="SemiBold" FontSize="18" />
-                                               <LineBreak />
-                                               <Run Text="{Binding Date, StringFormat=dd.MM.yyyy, Mode=OneTime}" FontSize="12" />
-                                            </TextBlock>
-                                        </Border>
-
-                                    </Grid>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                        <ScrollBar Visibility="Hidden" Orientation="Horizontal" HorizontalAlignment="Stretch" />
-                    </StackPanel>
-                </ScrollViewer>
-                <!--Record types-->
-                <ScrollViewer Grid.Row="1" Grid.Column="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" core:ScrollSynchronizer.VerticalScrollGroup="ScheduleEditorHorizontalScroll"
-                              core:ScrollSynchronizer.HorizontalScrollGroup="ScheduleEditorHorizontalScroll">
-                    <ItemsControl ItemsSource="{Binding Rooms, Mode=OneTime}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal" />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    </ItemsControl>
-                </ScrollViewer>
-            </Grid>
-        </DockPanel>
+                    </ScrollViewer>
+                </Grid>
+            </DockPanel>
+        </xctk:BusyIndicator>
     </DataTemplate>
 </ResourceDictionary>
