--- a/Registry/View/ScheduleEditorRecordTypeView.xaml
+++ b/Registry/View/ScheduleEditorRecordTypeView.xaml
@@ -2,10 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry">
     <DataTemplate DataType="{x:Type registry:ScheduleEditorRecordTypeViewModel}">
-        <Border BorderThickness="0 0 0 1" BorderBrush="LightGray">
+        <Border BorderThickness="0 0 0 1" BorderBrush="LightGray" HorizontalAlignment="Stretch">
             <StackPanel Orientation="Vertical">
-                <TextBlock Text="{Binding Name, Mode=OneTime}" Margin="3" HorizontalAlignment="Left" />
-                <TextBox Text="{Binding Time, UpdateSourceTrigger=PropertyChanged}" Margin="3" HorizontalAlignment="Stretch" />
+                <TextBlock Text="{Binding Name, Mode=OneTime}" Foreground="DimGray" FontSize="10" Margin="3" HorizontalAlignment="Left" />
+                <TextBlock FontWeight="SemiBold" Text="{Binding Time, UpdateSourceTrigger=PropertyChanged}" Margin="3" HorizontalAlignment="Stretch" />
             </StackPanel>
         </Border>
     </DataTemplate>
