--- a/MainLib/View/PersonDisabilitiesView.xaml
+++ b/MainLib/View/PersonDisabilitiesView.xaml
@@ -4,7 +4,7 @@
                     xmlns:mainLib="clr-namespace:MainLib"
                     xmlns:wpf="http://wpfcontrols.com/">
 
-    <core:UniversalConverter x:Key="PersonIdentityDocumentStateToBrushConverter">
+    <core:UniversalConverter x:Key="PersonDisabilityStateToBrushConverter">
         <core:ConverterItem From="{x:Static mainLib:ItemState.Active}">
             <core:ConverterItem.To>
                 <SolidColorBrush Color="Green" />
@@ -19,13 +19,13 @@
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
-    <DataTemplate  DataType="{x:Type mainLib:PersonIdentityDocumentsViewModel}">
+    <DataTemplate  DataType="{x:Type mainLib:PersonDisabilitiesViewModel}">
         <DockPanel Width="500" VerticalAlignment="Stretch" LastChildFill="True">
-            <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddPersonIdentityDocumentCommand}" Content="Добавить" Margin="5" Background="White"/>
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Height="46" Text="Нет ни одного документа, удостоверяющего личность. Чтобы создать, нажмите кнопку 'Добавить'" Foreground="Gray"
-                                           Visibility="{Binding PersonIdentityDocumentsHasNoItems, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24"  Command="{Binding AddPersonDisabilityCommand}" Content="Добавить" Margin="5" Background="White"/>
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Height="46" Text="Нет ни одного документа об инвалидности. Чтобы создать, нажмите кнопку 'Добавить'" Foreground="Gray"
+                                           Visibility="{Binding PersonDisabilitiesHasNoItems, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             <ScrollViewer MinHeight="100" MaxHeight="750" VerticalScrollBarVisibility="Auto">
-                <ItemsControl BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding PersonIdentityDocuments}" Margin="5">
+                <ItemsControl BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding PersonDisabilities}" Margin="5">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch" >
@@ -49,17 +49,17 @@
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" FontSize="14" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding PersonIdentityDocumentStateString, Mode=OneWay}" 
-                                       Foreground="{Binding PersonIdentityDocumentState, Converter={StaticResource PersonIdentityDocumentStateToBrushConverter}}"/>
+                                <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" FontSize="14" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding PersonDisabilityStateString, Mode=OneWay}" 
+                                       Foreground="{Binding PersonDisabilityState, Converter={StaticResource PersonDisabilityStateToBrushConverter}}"/>
 
                                 <Button  Grid.Row="0" Grid.Column="6" HorizontalAlignment="Right" Background="White" BorderThickness="0" ToolTip="Удалить документ"
-                                 Command="{Binding DataContext.DeletePersonIdentityDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}">
+                                 Command="{Binding DataContext.DeletePersonDisabilityCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}">
                                     <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png"  Width="16" Height="16"/>
                                 </Button>
 
                                 <TextBlock Grid.Row="1" Grid.Column="0" Margin="2" Text="Тип документа" />
-                                <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="2" ItemsSource="{Binding DataContext.ListIdentityDocumentTypes, Mode=OneTime, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
-                                  DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding IdentityDocumentTypeId}" />
+                                <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="2" ItemsSource="{Binding DataContext.ListDisabilityTypes, Mode=OneTime, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}"
+                                  DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding DisabilityTypeId}" />
 
                                 <TextBlock Grid.Row="2" Grid.Column="0" Margin="2" Text="Серия" />
                                 <TextBox Grid.Row="2" Grid.Column="1" Margin="2" Text="{Binding Series}"/>
@@ -72,7 +72,7 @@
                                  SelectedItem="{Binding GivenOrg, Mode=TwoWay}"
                                  Text="{Binding GivenOrgText, Mode=TwoWay}"
                                  IconVisibility="Visible"
-                                 Provider="{Binding IdentityDocumentsGivenOrgSuggestionProvider}"
+                                 Provider="{Binding DisabilitiesGivenOrgSuggestionProvider}"
                                  TabIndex="1"
                                  VerticalContentAlignment="Top">
                                     <wpf:AutoCompleteTextBox.LoadingContent>
@@ -92,7 +92,6 @@
                 </ItemsControl>
             </ScrollViewer>
         </DockPanel>
-        <!--</Window>-->
     </DataTemplate>
 </ResourceDictionary>
 
