--- a/Commission/View/CommissionManagementView.xaml
+++ b/Commission/View/CommissionManagementView.xaml
@@ -1,7 +1,9 @@
 ﻿<Window xmlns:Commission="clr-namespace:Commission" 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" xmlns:local="clr-namespace:Commission"
+        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock" 
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
+        xmlns:local="clr-namespace:Commission"
         x:Class="Commission.CommissionManagementView"
         Title="Комиссия" Height="411" Width="575" WindowState="Maximized">
     <Grid>
@@ -16,9 +18,12 @@
                         </xcad:LayoutAnchorable>
                     </xcad:LayoutAnchorablePane>
                     <xcad:LayoutDocumentPane>
-                        <xcad:LayoutDocument Title="Пациент" CanClose="False" CanFloat="False">
+                        <xcad:LayoutDocument Title="Решение для комиссии" CanClose="False" CanFloat="False">
                             <local:CommissionPersonFlowControl DataContext="{Binding PersonFlow}"/>
                         </xcad:LayoutDocument>
+                        <xcad:LayoutDocument Title="Пациент" CanClose="False" CanFloat="False">
+                            <local:CommissionPersonFlowControl DataContext="{Binding PersonFlow}"/>
+                        </xcad:LayoutDocument>                        
                     </xcad:LayoutDocumentPane>
                 </xcad:LayoutPanel>
             </xcad:LayoutRoot>            
