--- a/Registry/View/ScheduleEditorRoomDayView.xaml
+++ b/Registry/View/ScheduleEditorRoomDayView.xaml
@@ -9,38 +9,42 @@
             <Grid.RowDefinitions>
                 <RowDefinition MinHeight="75" SharedSizeGroup="{Binding DayOfWeek, StringFormat='Day{0}'}" />
             </Grid.RowDefinitions>
-            <Button Background="White" Padding="5" Command="{Binding EditRoomDayCommand, Mode=OneTime}" Width="240" HorizontalContentAlignment="Stretch">
+            <Button Padding="5" Command="{Binding EditRoomDayCommand, Mode=OneTime}" Width="250" HorizontalContentAlignment="Stretch">
                 <StackPanel Orientation="Vertical">
-                    <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ScheduleItems}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapPanel />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.GroupStyle>
-                            <GroupStyle>
-                                <GroupStyle.HeaderTemplate>
-                                    <DataTemplate DataType="{x:Type CollectionViewGroup}">
-                                        <TextBlock Foreground="DimGray" Margin="2" Text="{Binding Name}" />
-                                    </DataTemplate>
-                                </GroupStyle.HeaderTemplate>
-                                <GroupStyle.Panel>
-                                    <ItemsPanelTemplate>
-                                        <StackPanel Orientation="Vertical" Margin="2" />
-                                    </ItemsPanelTemplate>
-                                </GroupStyle.Panel>
-                            </GroupStyle>
-                        </ItemsControl.GroupStyle>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate DataType="{x:Type registry:ScheduleEditorScheduleItemViewModel}">
-                                <TextBlock FontWeight="SemiBold" Margin="2">
+                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <ItemsControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding ScheduleItems}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                            <ItemsControl.GroupStyle>
+                                <GroupStyle>
+                                    <GroupStyle.HeaderTemplate>
+                                        <DataTemplate DataType="{x:Type CollectionViewGroup}">
+                                            <TextBlock Foreground="DimGray" Margin="2" Text="{Binding Name}" />
+                                        </DataTemplate>
+                                    </GroupStyle.HeaderTemplate>
+                                    <GroupStyle.Panel>
+                                        <ItemsPanelTemplate>
+                                            <StackPanel Orientation="Vertical" Margin="2" />
+                                        </ItemsPanelTemplate>
+                                    </GroupStyle.Panel>
+                                </GroupStyle>
+                            </ItemsControl.GroupStyle>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate DataType="{x:Type registry:ScheduleEditorScheduleItemViewModel}">
+                                    <TextBlock FontWeight="SemiBold" Margin="2">
                                     <Run Text="{Binding StartTime, Mode=OneTime, StringFormat='{}{0:hh\\:mm}'}" />
                                     <Run Text="-" />
                                     <Run Text="{Binding EndTime, Mode=OneTime, StringFormat='{}{0:hh\\:mm}'}" />
-                                </TextBlock>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
+                                    </TextBlock>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                        <TextBlock Text="Кабинет закрыт" Foreground="DimGray" FontWeight="SemiBold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False"
+                           Visibility="{Binding IsRoomDayClosed, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                    </Grid>
                     <TextBlock Text="Только на этот день" Visibility="{Binding IsThisDayOnly, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="5 5 0 0" HorizontalAlignment="Right" Foreground="DimGray" FontStyle="Italic" FontSize="10" />
                 </StackPanel>
             </Button>
