--- a/MainLib/View/EditPersonDataUserControl.xaml
+++ b/MainLib/View/EditPersonDataUserControl.xaml
@@ -123,8 +123,8 @@
 
         <TextBlock Grid.Row="20" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding TextMessage}"/>
         <StackPanel  Grid.Row="21" Grid.Column="3" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Width="auto">
-            <Button Background="Transparent"  Margin="3"  Height="24" Padding="3" Content="Сохранить" Command="{Binding SaveChangesCommand}"/>
-            <Button Background="Transparent"  Margin="3"  Height="24" Padding="3" Content="Отмена" />
+            <Button Margin="3"  Height="24" Padding="3" Content="Сохранить" Command="{Binding SaveChangesCommand}"/>
+            <Button Margin="3"  Height="24" Padding="3" Content="Отмена" />
         </StackPanel>
 
     </Grid>
