--- a/MainLib/View/PersonInsuranceDocumentsView.xaml
+++ b/MainLib/View/PersonInsuranceDocumentsView.xaml
@@ -47,7 +47,7 @@
 
     <DataTemplate DataType="{x:Type  mainLib:PersonInsuranceDocumentsViewModel}">
         <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" LastChildFill="True">
-            <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24" Command="{Binding AddInsuranceDocumentCommand}" Content="Добавить" Margin="5" Background="White"/>
+            <Button DockPanel.Dock="Bottom"  HorizontalAlignment="Stretch" Height="24" Command="{Binding AddInsuranceDocumentCommand}" Content="Добавить" Margin="5" />
             <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center" Height="46" Text="Нет ни одного стахового документа. Чтобы создать, нажмите кнопку 'Добавить'" Foreground="Gray"
                                            Visibility="{Binding PersonInsuranceDocumentsHasNoItems, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             <ScrollViewer MinHeight="100" VerticalScrollBarVisibility="Auto">
@@ -74,7 +74,7 @@
                                 <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" FontSize="14" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding PersonInsuranceDocumentStateString, Mode=OneWay}" 
                                        Foreground="{Binding PersonInsuranceDocumentState, Converter={StaticResource PersonInsuranceDocumentStateToBackgroundBrushConverter}}"/>
 
-                                <Button  Grid.Row="0" Grid.Column="3" Margin="2" Background="White" Width="auto" Height="auto" Padding="2" HorizontalAlignment="Right"  BorderThickness="0" ToolTip="Удалить стаховой документ"
+                                <Button  Grid.Row="0" Grid.Column="3" Margin="2" Width="auto" Height="auto" Padding="2" HorizontalAlignment="Right"  BorderThickness="0" ToolTip="Удалить стаховой документ"
                                  Command="{Binding DataContext.DeleteInsuranceDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding DataContext, RelativeSource={RelativeSource Self}}">
                                     <Image Source="pack://application:,,,/Resources;component/Images/Delete24x24.png"  Width="16" Height="16"/>
                                 </Button>
